--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="text_close">Close</string>
     <string name="text_refreshing">Refreshing…</string>
     <string name="text_hello_from_radhika">"Hello from Radhika!"</string>
+
+    <string name="home">Home</string>
+    <string name="empty">Empty</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
